--- a/dolgozat/hasznalat/hasznalat.tex
+++ b/dolgozat/hasznalat/hasznalat.tex
@@ -22,6 +22,7 @@
     \item \texttt{libgtk-3}, legalább 3.22-es verzió.
     \item \texttt{libgdk-3}
     \item \texttt{libpango-1.0}
+    \item \texttt{libcairo-1.0} és \texttt{libpangocairo-1.0}
     \item \texttt{libgtksourceview-3}, legalább 3.18-as verzió.
 \end{itemize}
 
@@ -34,5 +35,5 @@ továbbá a következő Rust követelmények:
     \item Cargo
 \end{itemize}
 
-\noindent A következő paranccsal, illetve a Rust oldalán (\url{rust-lang.com})
+\noindent A következő paranccsal, illetve a Rust oldalán (\url{rust-lang.org})
 beszerezhető mind a három egyszerre: \fbox{\texttt{curl https://sh.rustup.rs -sSf | sh}}
