Hiányzó eredetiségi nyilatkozat.

--- a/dolgozat/dolgozat.tex
+++ b/dolgozat/dolgozat.tex
@@ -11,7 +11,7 @@
 \include{cimlap/cimlap}
 
 \pagestyle{empty}
-%\include{feladatkiiras/feladatkiiras} % TODO
+\include{feladatkiiras/feladatkiiras}
 
 \cleardoublepage
 \pagenumbering{gobble}
