Felhasználói dokumentáció + Fájl -> Új kimaradt.

--- a/dolgozat/dolgozat.tex
+++ b/dolgozat/dolgozat.tex
@@ -44,5 +44,8 @@
 \include{hasznalat/hasznalat}
 \include{irodalomjegyzek/irodalom}
 
+%\pagenumbering{gobble}
+%\include{hasznalat/felhasznaloi-doc}
+
 \end{document}
 
