--- a/dolgozat/fejezetek/4_2_cargo.tex
+++ b/dolgozat/fejezetek/4_2_cargo.tex
@@ -114,6 +114,7 @@ Jelenleg a programban a következő billentyű-kombinációk léteznek:
 
 \begin{itemize}
     \item \texttt{F11}: Teljes képernyő
+    \item \texttt{Ctrl+N}: Új fájl
     \item \texttt{Ctrl+O}: Megnyitás
     \item \texttt{Ctrl+S}: Mentés
     \item \texttt{Ctrl+W}: Jelenlegi fájl bezárása
