Névütközések az adathordozókon.

--- a/dolgozat/hasznalat/hasznalat.tex
+++ b/dolgozat/hasznalat/hasznalat.tex
@@ -13,7 +13,7 @@
 \begin{itemize}
     \item \texttt{dolgozat.pdf}: A teljes szakdolgozat, \LaTeX{} segítségével készítve.
     \item \texttt{felhasznaloi-dokumentacio.pdf}: Felhasználói dokumentáció a program használatához, \LaTeX{}-ben írva.
-    \item \texttt{rozsda-ide/}: A program ládája, benne a program forráskódjával.
+    \item \texttt{rozsda-ide-src/}: A program ládája, benne a program forráskódjával.
     \item \texttt{rozsda-ide}: A program futtatható változata, 64-bites Linuxra.
 \end{itemize}
 
